--- a/frontend/src/css/playlist_generated.css
+++ b/frontend/src/css/playlist_generated.css
@@ -15,16 +15,18 @@
 
 .album-cover {
     align-self: center;
-    margin-top: 80px;
-    height: 200px
+    margin-top: 65px;
+    padding: none none;
+    height: 27vh;
 }
 
 .playlist-table {
     align-self: center;
     margin-top: 30px;
-    height: 300px;
+    height: 400px;
     overflow: auto;
     z-index: 10;
+    background-color: #d9d9d90a;
     
 }
 
