--- a/frontend/src/css/home_auth.css
+++ b/frontend/src/css/home_auth.css
@@ -49,9 +49,8 @@
     border: 1px none;
     border-radius: 100px;
     justify-content: center;
-    display: flex;
-    left: 1200px;
-    top: 70px;
+    display: inline-block;
+    left: 925px;
     height: 50px;
     min-width: 250px;
     padding: 5.2px 43.4px;
@@ -61,8 +60,8 @@
     font-weight: 700;
     letter-spacing: 0;
     cursor: pointer;
-    position: fixed;
     transition-duration: 0.2s;
+    position: relative;
 }
 
 .playlist-button:hover{
