--- a/frontend/src/css/home_auth.css
+++ b/frontend/src/css/home_auth.css
@@ -50,7 +50,7 @@
     border-radius: 100px;
     justify-content: center;
     display: inline-block;
-    margin-left:65vw;
+    margin-left:55vw;
     height: 50px;
     min-width: 250px;
     padding: 5.2px 43.4px;
@@ -99,13 +99,13 @@
     border-radius: 15px;
     display: flex;
     gap: 30px;
-    height: 518px;
+    height: 59vh;
     margin-top: 0px;
     overflow: hidden;
     overflow-x: scroll;
     flex-wrap: nowrap;
     padding: 21px 0;
-    width: 1377px;
+    width: 96vw;
     min-width: 92vw;
     z-index: 5;
 }
@@ -146,12 +146,12 @@
     border-radius: 15px;
     display: flex;
     gap: 30px;
-    height: 518px;
+    height: 59vh;
     margin-top: 17px;
     overflow: hidden;
     overflow-x: scroll;
     padding: 21px 0;
-    width: 1377px;
+    width: 96vw;
     z-index: 6;
     min-width: 92vw;
 
