--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -9,14 +9,11 @@
 .login-header {
     background-image: url(../../assets/login_background.png);
     background-size: cover;
-    margin-bottom: 1%;
     background-position: center;
-    position: top;
+    top: 0;
     min-height: 100vh;
     min-width: 100vw;
-    background-Size: cover;
     background-Repeat: 'no-repeat';
-    background-Position: center;
 }
 
 /* Used for setting the green bar at the top with the black spotigo text 
@@ -24,28 +21,39 @@
 */
 .login-header>h1 {
     color: black;
-    background-color: #1DB954;
+    background-color: transparent;
     text-align: left;
-    position: top;
-    margin-bottom: 1%;
-    padding: 0px 8px 8px;
+    top: 0;
+    display: flex;
+    z-index: 100;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    padding: 8px;
+    vertical-align: center;
     font-family: sans-serif;
     font-weight: 600;
-    vertical-align: center;
 }
 
 /* Used for setting the large text above the button; first line */
 .login-header>h2 {
     color: black;
     font-size: xxx-large;
+    margin: 5px 0px 0px 5px;
     font-family: sans-serif;
+}
+
+.login-header>h1>h3 {
+   color: black;
+   margin: 0;
+   font-family: sans-serif;
+   font-weight: 600;
 }
 
 /* Used for setting the small text above button */
 .login-header>h4 {
     color: black;
-    margin-top: .5%;
-    font-size: large;
+    margin: 10px;
+    font-size: x-large;
     font-weight: lighter;
     font-family: sans-serif;
 }
@@ -54,14 +62,14 @@
 .login-button {
     background-color: #1DB954;
     font-size: 24px;
-    color: black;
-    font-weight: 50px;
+    color: whitesmoke;
+    font-weight: bold;
     padding: 5px 35px;
     border-radius: 32px;
     border: 5px solid #1DB954;
     text-transform: uppercase;
     align-self: center;
-    margin-top: 1%;
+    margin: 10px;
     cursor: pointer;
     box-shadow: 0px 2px 2px lightgray;
     transition-duration: .3s;
@@ -69,12 +77,11 @@
 
 .login-button:hover {
    background-color: transparent;
+   color: black;
 }
 
 /* Used for customizing the `continue without login` link */
 .continue-wo-login-link {
     color: gray;
-    position: fixed;
-    margin: 80px -75px;
+    margin-top: 20px;
 }
-
