--- a/frontend/src/css/playlist_generated.css
+++ b/frontend/src/css/playlist_generated.css
@@ -7,7 +7,8 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    width: 1440px;
+    min-height: 100vh;
+    width: 100vw;
 }
 
 .album-cover {
