--- a/frontend/src/css/playlist_generator.css
+++ b/frontend/src/css/playlist_generator.css
@@ -52,7 +52,7 @@ textarea{
     background-color: rgba(255, 255, 255, 1);
     border: 1px none;
     display: flex;
-    max-height: 100vh;
+    min-height: 100vh;
     min-width: 100vw;
 }
 
