Fixed select image button

--- a/frontend/src/css/playlist_generator.css
+++ b/frontend/src/css/playlist_generator.css
@@ -296,7 +296,7 @@ textarea{
     padding: none none;
 }
 
-.album-cover:hover{
+.album-cover-pg:hover{
     width: 280px;
     height: 280px;
     background: url(../../assets/choosephoto.png);
