--- a/frontend/src/css/playlist_generator.css
+++ b/frontend/src/css/playlist_generator.css
@@ -67,10 +67,8 @@ textarea{
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    margin-left: 53px;
-    margin-top: 101px;
-    min-height: 876px;
-    width: 604px;
+    min-height: 101vh;
+    margin-top: 80px;
     z-index: 1;
 }
 
@@ -81,7 +79,7 @@ textarea{
     gap: 6px;
     margin-top: 42px;
     min-height: 98px;
-    width: 602px;
+    width: 32vw;
 }
 
 .rectangle-13-2 {
@@ -89,18 +87,7 @@ textarea{
     border: 1px none;
     box-shadow: inset 4px 4px 12px 12px #00000040;
     height: 100px;
-    top: 60px;
-    width: 400px;
-    resize: none;
-}
-
-
-.description-1 {
-    letter-spacing: 0;
-    line-height: normal;
-    font-size: 35px;
-    min-height: 54px;
-    width: 240px;
+    width: 32vw;
 }
 
 .optional-1 {
@@ -116,9 +103,8 @@ textarea{
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 6px;
     min-height: 98px;
-    width: 602px;
+    width: 36vw;
 }
 
 .rectangle-13 {
@@ -127,41 +113,7 @@ textarea{
     box-shadow: inset 4px 4px 12px 12px #00000040;
     height: 30px;
     margin-left: 0;
-    width: 400px;
-}
-
-.title-2 {
-    letter-spacing: 0;
-    line-height: normal;
-    font-size: 35px;
-    min-height: 54px;
-    width: 100px;
-}
-
-.genre-one {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    margin-top: 42px;
-    min-height: 98px;
-    width: 602px;
-}
-
-.genreText {
-    background-color: rgba(255, 255, 255, 0.18);
-    border: 1px none;
-    box-shadow: inset 4px 4px 12px 12px #00000040;
-    height: 39px;
-    width: 600px;
-    display: flex;
-}
-
-.genre {
-    letter-spacing: 0;
-    line-height: normal;
-    min-height: 54px;
-    width: 240px;
+    width: 32vw;
 }
 
 .create-button {
@@ -198,40 +150,6 @@ textarea{
     gap: 55px;
     height: 98px;
     margin-top: 44px;
-    min-width: 604px;
-}
-
-.length {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    min-height: 98px;
-    width: 414px;
-}
-
-.length-1 {
-    letter-spacing: 0;
-    line-height: normal;
-    min-height: 54px;
-    width: 157px;
-}
-
-.overlap-group2 {
-    align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.18);
-    box-shadow: inset 4px 4px 12px 12px #00000040;
-    display: flex;
-    height: 39px;
-    min-width: 390px;
-    padding: 0 12px;
-}
-
-.optional {
-    letter-spacing: 0;
-    line-height: normal;
-    min-height: 32px;
-    width: 122px;
 }
 
 .bpm {
@@ -239,9 +157,7 @@ textarea{
     display: flex;
     flex-direction: column;
     font-size: 35px;
-    gap: 6px;
     min-height: 98px;
-    width: 135px;
 }
 
 .rectangle-13-1 {
@@ -250,33 +166,6 @@ textarea{
     box-shadow: inset 4px 4px 12px 12px #00000040;
     height: 30px;
     width: 100px;
-}
-
-.bpm-1 {
-    letter-spacing: 0;
-    line-height: normal;
-    font-size: 35px;
-    min-height: 54px;
-    width: 101px;
-}
-
-.genre-two {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    margin-top: 42px;
-    min-height: 98px;
-    width: 602px;
-}
-
-.overlap-group1 {
-    align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.18);
-    box-shadow: inset 4px 4px 12px 12px #00000040;
-    display: flex;
-    height: 39px;
-    min-width: 600px;
 }
 
 .image-upload>input {
@@ -317,9 +206,9 @@ textarea{
     border: 1px none;
     display: flex;
     justify-content: center;
-    margin-left: 150px;
-    margin-top: 60px;
-    margin-right: 160px;
+    margin-left: 160px;
+    margin-top: 70px;
+    margin-right: 40px;
     height: 350px;
     width: 350px;
     z-index: 2;
@@ -356,39 +245,6 @@ textarea{
    font-weight: 600;
 }
 
-.search {
-    align-items: flex-end;
-    align-self: flex-end;
-    border: 1px none;
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 635px;
-    min-width: 515px;
-}
-
-.search-1 {
-    height: 46px;
-    margin-bottom: -0.12px;
-    width: 46px;
-}
-
-.title {
-    color: transparent;
-    font-family: "Open Sans";
-    font-size: 45px;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-left: 12px;
-    margin-top: -9px;
-    min-height: 75px;
-    width: 144px;
-}
-
-.span0 {
-    color:rgba(0, 0, 0, 1);
-}
-
 .logo {
     align-items: flex-start;
     align-self: center;
@@ -397,28 +253,6 @@ textarea{
     justify-content: flex-end;
     min-width: 46px;
     padding: 0 2.2px;
-}
-
-.subtract {
-    height: 42px;
-    width: 42px;
-}
-
-.user {
-    align-items: flex-end;
-    border: 1px none;
-    cursor: pointer;
-    display: flex;
-    height: 52px;
-    margin-left: 6px;
-    margin-top: -4px;
-    min-width: 43px;
-    padding: 8px 4px;
-}
-
-.vector {
-    height: 35px;
-    width: 34px;
 }
 
 @keyframes spinner {
